# ai-freelance-copilot

./: .dockerignore  .env.example  .gitignore  DELIVERABILITY.md  DEPLOY.md  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  README.md  analytics.py  config.py  costs.py  docker-compose.yml  main.py  pipeline.py  pyproject.toml  render.yaml  requirements.txt  runlog.py  voice.py
agents/: compliance.py  followup.py  graph.py  llm.py  proposal_writer.py  qualifier.py  researcher.py
content/: __init__.py  engine.py
core/: schemas.py  state.py
db/: models.py  session.py
deploy/: copilot-dashboard.service  run-dashboard.sh  tunnel.sh
docs/: architecture.drawio
followup/: __init__.py  runner.py
interfaces/: dashboard.py  mcp_server.py  notify.py
k8s/: configmap.yaml  cronjob.yaml  deployment.yaml  secret.example.yaml  service.yaml  servicemonitor.yaml
monitoring/: grafana-dashboard.json
nginx/: default.conf
observability/: metrics.py
optimizer/: __init__.py  optimizer.py
outreach/: __init__.py  deliverability.py  extract.py  pitch.py  sender.py  suppression.py
rag/: embedder.py  ingest.py  learning.py  retriever.py  store.py
reply/: __init__.py  inbox.py  respond.py  runner.py  sender.py
scripts/: build_kb.py
sources/: _keywords.py  base.py  contra_startup.py  hn_freelancer.py  hn_hiring.py  registry.py  remote_boards.py  upwork_rss.py
templates/: analytics.html  base.html  content.html  conversations.html  inbox.html  lead.html  outreach.html  pipeline.html  runs.html  strategy.html
tests/: test_agents.py  test_analytics.py  test_auth.py  (+16 more)
(+8 files in other folders)
