[project]
name = "ai-freelance-copilot"
version = "0.1.0"
description = "Agentic AI copilot that discovers, qualifies, researches and drafts tailored freelance proposals — human-approved before any send."
requires-python = ">=3.11"
authors = [{ name = "Surya A", email = "suryaanandan1995@gmail.com" }]
license = { text = "MIT" }

[project.optional-dependencies]
prod = ["psycopg2-binary>=2.9", "qdrant-client>=1.9", "sentence-transformers>=2.7"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
